5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1592_1803.log
== TEST (2019-04-01 13:44:41) 
-- CODE:
A= 1538
x= A // 1000
y= A % 1000
g= y // 100
h= y % 100
k= h // 10
j= h % 10
o= j // 1
 
	l= (o * 2 + k * 3 + g * 4 + x * 5) / 11
-- ERROR:
File "XXXX", line 10
    l= (o * 2 + k * 3 + g * 4 + x * 5) / 11
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:44:58) 
-- CODE:
A= 1538
x= A // 1000
y= A % 1000
g= y // 100
h= y % 100
k= h // 10
j= h % 10
o= j // 1
 
l= (o * 2 + k * 3 + g * 4 + x * 5) / 11
-- ERROR:
File "XXXX", line 10
    l= (o * 2 + k * 3 + g * 4 + x * 5) / 11
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:45:51) 
-- CODE:
A=int(input("numero de 4 digitos: ")) 
x= A // 1000
y= A % 1000
g= y // 100
h= y % 100
k= h // 10
j= h % 10
o= j // 1
 
l= (o * 2 + k * 3 + g * 4 + x * 5) / 11
 print(l)
-- ERROR:
File "XXXX", line 11
    print(l)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:46:00) 
-- CODE:
A=int(input("numero de 4 digitos: ")) 
x= A // 1000
y= A % 1000
g= y // 100
h= y % 100
k= h // 10
j= h % 10
o= j // 1
 
l= (o * 2 + k * 3 + g * 4 + x * 5) / 11
print(l)
-- OUTPUT:
0.9090909090909091
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:47:14) 
-- CODE:
A=int(input("numero de 4 digitos: ")) 
x= A // 1000
y= A % 1000
g= y // 100
h= y % 100
k= h // 10
j= h % 10
o= j // 1
 
l= (o * 2 + k * 3 + g * 4 + x * 5) %  11
print(l)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:47:26) 
-- CODE:
A=int(input("numero de 4 digitos: ")) 
x= A // 1000
y= A % 1000
g= y // 100
h= y % 100
k= h // 10
j= h % 10
o= j // 1
 
l= (o * 2 + k * 3 + g * 4 + x * 5) %  11
print(l)
-- EXECUTION TIME:
0.181877
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:49:31) 
-- CODE:
A=int(input("numero de 4 digitos: ")) 
x= A // 1000
y= A % 1000
g= y // 100
h= y % 100
k= h // 10
j= h % 10
o= j // 1
 
l= (o * 2 + k * 3 + g * 4 + x * 5) %  11
print(l)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:49:35) 
-- CODE:
A=int(input("numero de 4 digitos: ")) 
x= A // 1000
y= A % 1000
g= y // 100
h= y % 100
k= h // 10
j= h % 10
o= j // 1
 
l= (o * 2 + k * 3 + g * 4 + x * 5) %  11
print(l)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:49:56) 
-- CODE:
A=int(input("numero de 4 digitos: ")) 
x= A // 1000
y= A % 1000
g= y // 100
h= y % 100
k= h // 10
j= h % 10
o= j // 1
 
l= (o * 2 + k * 3 + g * 4 + x * 5) %  11
print(l)
-- EXECUTION TIME:
0.157326
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
